# github_stat_to_postgres

./: README.md  data.json  main.py  postgres_db.py  pyproject.toml
src/: functions.py  main.py  postgres_db.py
